--- a/main.html
+++ b/main.html
@@ -10,19 +10,23 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-<h1><marquee>Welcome to Accio jobs!</marquee></h1>
+<marquee><h1>Welcome to Accio jobs!</h1></marquee>
 	<h1><a href="https://acciojob.com/blog/">Blog</a></h1>
-	<img height="200px" src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcQwCIromNPYLOfhfoN3HjwYajXiLHrqJtvIyYIS50NDITrMVkTt">
-	<h1><a href="https://acciojob.com/blog/brute-force-vs-optimization/">Brute Force vs. Optimization</a></h1>
-	<p>We can say that optimization is a critical aspect of algorithm design and implementation. It involves the careful balance between time and space complexity, aiming to create algorithms that execute faster and use minimal memory</p>
-	<img height="200px" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTju7k-whKwMDNwDWdzYczupz1kdoTh22SZ3Dn5zQSX2g6pe04X">
-	
-	<h1><a href="https://acciojob.com/blog/dsa-vs-competitive-programming/">DSA vs. Competitive Programming</a></h1>
-<p>Data Structures and Algorithms (DSA) and Competitive Programming are two fundamental concepts in computer science that play significant roles in a programmer's skill set. DSA focuses on the study of various data structures (like arrays, linked lists, trees, graphs) and algorithms (such as sorting, searching, dynamic programming) that are essential for organizing and manipulating data effectively. </p>
-
-	<img height="200px" src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcRBLqYWxyASUBXUncn6OA6QrfkzCCBsVTqoPXiBfUPYkU8BAfZZ">
-	<h1><a href="https://acciojob.com/blog/untitled-19/">Complete Guide on FlexBox</a></h1>
-     <p>As a job seeker, you may wonder about the skills and qualities that employers value in the ever-evolving job market. In today's competitive landscape, technical proficiency is undoubtedly crucial, but employers increasingly seek candidates who possess a diverse skill set and a growth mindset. Adaptability and continuous learning are highly prized, as they demonstrate your ability to navigate new challenges and technologies. Communication skills, both written and verbal, are equally vital, as they facilitate effective collaboration and the ability to convey complex ideas clearly.</p>
+	<div>
+	    <img height="200px" src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcQwCIromNPYLOfhfoN3HjwYajXiLHrqJtvIyYIS50NDITrMVkTt">
+	    <h1><a href="https://acciojob.com/blog/brute-force-vs-optimization/">Brute Force vs. Optimization</a></h1>
+	    <p>We can say that optimization is a critical aspect of algorithm design and implementation. It involves the careful balance between time and space complexity, aiming to create algorithms that execute faster and use minimal memory</p>
+	</div>
+	<div>
+		<img height="200px" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTju7k-whKwMDNwDWdzYczupz1kdoTh22SZ3Dn5zQSX2g6pe04X">
+	   <h1><a href="https://acciojob.com/blog/dsa-vs-competitive-programming/">DSA vs. Competitive Programming</a></h1>
+       <p>Data Structures and Algorithms (DSA) and Competitive Programming are two fundamental concepts in computer science that play significant roles in a programmer's skill set. DSA focuses on the study of various data structures (like arrays, linked lists, trees, graphs) and algorithms (such as sorting, searching, dynamic programming) that are essential for organizing and manipulating data effectively. </p>
+	</div>
+	<div>
+	   <img height="200px" src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcRBLqYWxyASUBXUncn6OA6QrfkzCCBsVTqoPXiBfUPYkU8BAfZZ">
+	   <h1><a href="https://acciojob.com/blog/untitled-19/">Complete Guide on FlexBox</a></h1>
+        <p>As a job seeker, you may wonder about the skills and qualities that employers value in the ever-evolving job market. In today's competitive landscape, technical proficiency is undoubtedly crucial, but employers increasingly seek candidates who possess a diverse skill set and a growth mindset. Adaptability and continuous learning are highly prized, as they demonstrate your ability to navigate new challenges and technologies. Communication skills, both written and verbal, are equally vital, as they facilitate effective collaboration and the ability to convey complex ideas clearly.</p>
+	</div>
 </body>
 
 </html>
