--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-<marquee><h1>Welcome to Accio jobs!</h1></marquee>
+<marquee><h1>Welcome to Accio Jobs!</h1></marquee>
 	<h1><a href="https://acciojob.com/blog/">Blog</a></h1>
 	<div>
 	    <img height="200px" src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcQwCIromNPYLOfhfoN3HjwYajXiLHrqJtvIyYIS50NDITrMVkTt">
